<resources>
    <string name="app_name">WeatherAlertApp</string>
    <string name="weather_info">City, Temperature, Weather Condition</string>
    <string name="start_notifications">Start Notifications</string>
    <string name="stop_notifications">Stop Notifications</string>
    <string name="select_notifications">Select Notifications:</string>
    <string name="sunrise_time">Sunrise Time</string>
    <string name="sunset_time">Sunset Time</string>
    <string name="temperature_change">Sudden Temperature Change</string>
    <string name="rain">Rain</string>
    <string name="strong_wind">Strong Wind</string>
    <string name="snow">Snow</string>
    <string name="weather_api_key">MmE5NmU2MWQ1YTUxOWU0MjA5MWRkMjZhMzM5NzQxYTU=</string>
</resources>
