<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_weather_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_info"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/btn_start_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_notifications"
        android:minHeight="48dp"
        android:paddingVertical="8dp" />

    <Button
        android:id="@+id/btn_stop_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_notifications"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:paddingVertical="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_notifications"
        android:paddingTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cb_sunrise_time"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="8dp"
        android:text="@string/sunrise_time" />

    <CheckBox
        android:id="@+id/cb_sunset_time"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="8dp"
        android:text="@string/sunset_time" />

    <CheckBox
        android:id="@+id/cb_temperature_change"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="8dp"
        android:text="@string/temperature_change" />

    <CheckBox
        android:id="@+id/cb_rain"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="8dp"
        android:text="@string/rain" />

    <CheckBox
        android:id="@+id/cb_strong_wind"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="8dp"
        android:text="@string/strong_wind" />

    <CheckBox
        android:id="@+id/cb_snow"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="8dp"
        android:text="@string/snow" />

</LinearLayout>